Fixed fluid cards align

--- a/src/containers/app/App.css
+++ b/src/containers/app/App.css
@@ -1260,6 +1260,8 @@ input[type="number"] {
       height: calc(100vh - 135px); }
     .site-content .page-content .page-body .marketplace .row > * {
       height: calc(50% - 19px); }
+    .site-content .page-content .page-body .marketplace .row.fluid-row > * {
+      height: auto !important; }
 
 @media (max-width: 1550px) {
   .page-header {
